fixes some energy siphon wireless link issues